force-app/main/default/objects/custom_create58__c/custom_create58__c.object-meta.xml
<CustomObject>
    <label>Custom created object58</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects58</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>