force-app/main/default/objects/custom_create58__c/fields/custom_create_58field612__c.field-meta.xml
<CustomField>
    <fullName>custom_create_58field612__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 58field612</label>
    <type>Checkbox</type>
</CustomField>